force-app/main/default/objects/Mobile_login_SS__c/Mobile_login_SS__c.object-meta.xml
<CustomObject>
    <label>Mobile login SS</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Mobile login SS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile login SS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>