force-app/main/default/objects/Mobile_login_SS__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Rep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Mobile login SS</relationshipLabel>
    <relationshipName>Mobile_login_SS</relationshipName>
    <type>Lookup</type>
</CustomField>