force-app/main/default/objects/Mobile_login_SS__c/fields/PSR_ID__c.field-meta.xml
<CustomField>
    <fullName>PSR_ID__c</fullName>
    <label>PSR ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>