force-app/main/default/objects/Mobile_login_SS__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Rep</label>
    <length>20</length>
    <type>Text</type>
</CustomField>