force-app/main/default/objects/Mobile_login_SS__c/fields/SM_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Name__c</fullName>
    <formula>$User.name_zm_sm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM Name</label>
    <type>Text</type>
</CustomField>