force-app/main/default/objects/Mobile_login_SS__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mobile_login_SS</relationshipName>
    <type>Lookup</type>
</CustomField>